# CheckInn

./: CMakeLists.txt  main.cpp
include/: Booking.h  Client.h  Hotel.h  Room.h
src/: Booking.cpp  Client.cpp  Hotel.cpp  Room.cpp  main.cpp
